// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`help should generate help for the program 1`] = `
"Usage: padrone-test [command]

Commands:
  list               
  list <subcommand>  
  show               
  filter             
  batch              
  search             
  noop               
  tags               
  deprecated-test    
  hidden-test        
  examples-test      

Global: help [command], version, [command] --repl
Run "padrone-test [command] --help" for more information. Use "--all" for all global commands.
"
`;

exports[`help should generate help for the top level command 1`] = `
"Usage: padrone-test [command]

Commands:
  list               
  list <subcommand>  
  show               
  filter             
  batch              
  search             
  noop               
  tags               
  deprecated-test    
  hidden-test        
  examples-test      

Global: help [command], version, [command] --repl
Run "padrone-test [command] --help" for more information. Use "--all" for all global commands.
"
`;

exports[`help should generate help for a command 1`] = `
"Usage: padrone-test show <id> [options]

Arguments:
  id  Task ID

Options:
  --priority  [string]  Priority level (default: medium) (choices: low, medium, high)
  --verbose             Show detailed information
"
`;

exports[`help should generate help for a command with enabled colors 1`] = `
"\x1B[1mUsage:\x1B[0m \x1B[36m\x1B[1mpadrone-test show\x1B[0m \x1B[90m<id>\x1B[0m \x1B[90m[options]\x1B[0m

\x1B[1mArguments:\x1B[0m
  \x1B[32mid\x1B[0m  \x1B[2mTask ID\x1B[0m

\x1B[1mOptions:\x1B[0m
  \x1B[32m--priority\x1B[0m  \x1B[33m[string]\x1B[0m  \x1B[2mPriority level\x1B[0m \x1B[90m(default: medium)\x1B[0m \x1B[90m(choices: low, medium, high)\x1B[0m
  \x1B[32m--verbose\x1B[0m             \x1B[2mShow detailed information\x1B[0m
"
`;

exports[`help should generate help for a command with nested commands 1`] = `
"Usage: padrone-test list extended [command] [options]

Commands:
  [default]  
  extended   

Run "padrone-test list extended [command] --help" for more information on a command.

Options:
  --status    [string]  Filter by status (choices: pending, in_progress, completed)
  --priority  [string]  Filter by priority (default: medium) (choices: low, medium, high)
"
`;

exports[`help should generate help for a command with meta object 1`] = `
"Usage: padrone-test tags [options]

Options:
  -v, --verbose  Show detailed information
"
`;

exports[`help should generate help for a command with array enum options 1`] = `
"Usage: padrone-test search <query> [options]

Arguments:
  query  Search query

Options:
  -s, --status  [string[]]  Filter by status (choices: pending, in_progress, completed)
"
`;

exports[`help should generate help for a command with deprecated arguments 1`] = `
"Usage: padrone-test deprecated-test [options]

Options:
  --old-arg                  [string]  This arg is deprecated (deprecated)
  --new-arg                  [string]  This is the new arg
  --deprecated-with-message            This arg is deprecated with a message
                                       (deprecated: Use newArg instead)
"
`;

exports[`help should generate help for a command with deprecated arguments and colors 1`] = `
"\x1B[1mUsage:\x1B[0m \x1B[36m\x1B[1mpadrone-test deprecated-test\x1B[0m \x1B[90m[options]\x1B[0m

\x1B[1mOptions:\x1B[0m
  \x1B[9m\x1B[90m--old-arg\x1B[0m                  \x1B[33m[string]\x1B[0m  \x1B[9m\x1B[90mThis arg is deprecated\x1B[0m \x1B[90m(deprecated)\x1B[0m
  \x1B[32m--new-arg\x1B[0m                  \x1B[33m[string]\x1B[0m  \x1B[2mThis is the new arg\x1B[0m
  \x1B[9m\x1B[90m--deprecated-with-message\x1B[0m            \x1B[9m\x1B[90mThis arg is deprecated with a message\x1B[0m
                                       \x1B[90m(deprecated: Use newArg instead)\x1B[0m
"
`;

exports[`help should generate help for a command with hidden arguments 1`] = `
"Usage: padrone-test hidden-test [options]

Options:
  --visible-arg      [string]  This arg is visible in help
  --another-visible            This arg is also visible
"
`;

exports[`help should generate help for a command with hidden arguments and colors 1`] = `
"\x1B[1mUsage:\x1B[0m \x1B[36m\x1B[1mpadrone-test hidden-test\x1B[0m \x1B[90m[options]\x1B[0m

\x1B[1mOptions:\x1B[0m
  \x1B[32m--visible-arg\x1B[0m      \x1B[33m[string]\x1B[0m  \x1B[2mThis arg is visible in help\x1B[0m
  \x1B[32m--another-visible\x1B[0m            \x1B[2mThis arg is also visible\x1B[0m
"
`;

exports[`help should generate help for a command with examples 1`] = `
"Usage: padrone-test examples-test [options]

Options:
  --output   [string]  Specify the output file path
                       Example: output.txt, ./dist/result.json
  --format   [string]  Choose the output format (choices: json, yaml, xml)
                       Example: json, yaml
  --verbose            Show detailed information
                       Example: true
  --config   [string]  Path to configuration file
                       Example: ./config.json, ~/.config/app.json
"
`;

exports[`help should generate help for a command with examples and colors 1`] = `
"\x1B[1mUsage:\x1B[0m \x1B[36m\x1B[1mpadrone-test examples-test\x1B[0m \x1B[90m[options]\x1B[0m

\x1B[1mOptions:\x1B[0m
  \x1B[32m--output\x1B[0m   \x1B[33m[string]\x1B[0m  \x1B[2mSpecify the output file path\x1B[0m
                       \x1B[4mExample:\x1B[0m \x1B[3moutput.txt, ./dist/result.json\x1B[0m
  \x1B[32m--format\x1B[0m   \x1B[33m[string]\x1B[0m  \x1B[2mChoose the output format\x1B[0m \x1B[90m(choices: json, yaml, xml)\x1B[0m
                       \x1B[4mExample:\x1B[0m \x1B[3mjson, yaml\x1B[0m
  \x1B[32m--verbose\x1B[0m            \x1B[2mShow detailed information\x1B[0m
                       \x1B[4mExample:\x1B[0m \x1B[3mtrue\x1B[0m
  \x1B[32m--config\x1B[0m   \x1B[33m[string]\x1B[0m  \x1B[2mPath to configuration file\x1B[0m
                       \x1B[4mExample:\x1B[0m \x1B[3m./config.json, ~/.config/app.json\x1B[0m
"
`;

exports[`help should generate help in console format 1`] = `
"\x1B[1mUsage:\x1B[0m \x1B[36m\x1B[1mpadrone-test show\x1B[0m \x1B[90m<id>\x1B[0m \x1B[90m[options]\x1B[0m

\x1B[1mArguments:\x1B[0m
  \x1B[32mid\x1B[0m  \x1B[2mTask ID\x1B[0m

\x1B[1mOptions:\x1B[0m
  \x1B[32m--priority\x1B[0m  \x1B[33m[string]\x1B[0m  \x1B[2mPriority level\x1B[0m \x1B[90m(default: medium)\x1B[0m \x1B[90m(choices: low, medium, high)\x1B[0m
  \x1B[32m--verbose\x1B[0m             \x1B[2mShow detailed information\x1B[0m
"
`;

exports[`help should generate help in markdown format 1`] = `
"**Usage:** **padrone-test show** *<id>* *[options]*



### Arguments:

  \`id\`  Task ID



### Options:

  \`--priority\`  \`[string]\`  Priority level

    *(default: medium)* *(choices: low, medium, high)*

  \`--verbose\`             Show detailed information

"
`;

exports[`help should generate help in html format 1`] = `"<div style="font-family: monospace; line-height: 1.6;"><strong>Usage:</strong> <strong style="color: #00bcd4;">padrone-test show</strong> <span style="color: #999;">&lt;id&gt;</span> <span style="color: #999;">[options]</span><br><br><h3>Arguments:</h3><br>&nbsp;&nbsp;<code style="color: #4caf50;">id</code>  <span style="color: #666;">Task ID</span><br><br><h3>Options:</h3><br>&nbsp;&nbsp;<code style="color: #4caf50;">--priority</code>  <code style="color: #ff9800;">[string]</code>  <span style="color: #666;">Priority level</span><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span style="color: #999;">(default: medium)</span> <span style="color: #999;">(choices: low, medium, high)</span><br>&nbsp;&nbsp;<code style="color: #4caf50;">--verbose</code>             <span style="color: #666;">Show detailed information</span><br></div>"`;

exports[`help should generate help in json format 1`] = `
"{
  "name": "show",
  "usage": {
    "command": "padrone-test show",
    "hasSubcommands": false,
    "hasPositionals": true,
    "hasArguments": true,
    "helpFlag": "--help"
  },
  "positionals": [
    {
      "name": "id",
      "description": "Task ID",
      "optional": false,
      "type": "string"
    }
  ],
  "arguments": [
    {
      "name": "priority",
      "description": "Priority level",
      "optional": true,
      "default": "medium",
      "type": "string",
      "enum": [
        "low",
        "medium",
        "high"
      ],
      "variadic": false,
      "negatable": false
    },
    {
      "name": "verbose",
      "description": "Show detailed information",
      "optional": true,
      "type": "boolean",
      "variadic": false,
      "negatable": true
    }
  ]
}"
`;

exports[`help with full detail mode should generate full help with all nested commands in text format 1`] = `
"Usage: padrone-test [command]

Commands:
  help (h)           Display help for a command
  version            Display the version number
  repl               Start an interactive REPL
  list               
  list <subcommand>  
  show               
  filter             
  batch              
  search             
  noop               
  tags               
  deprecated-test    
  hidden-test        
  examples-test      

Global: help [command], version, [command] --repl
Run "padrone-test [command] --help" for more information. Use "--all" for all global commands.

Subcommand Details:

────────────────────────────────────────────────────────────
Usage: padrone-test help [...command] [options]

Aliases: h

Display help for a command

Arguments:
  ...command  The command to show help for

Options:
  -d, --detail  [string]  How much detail to show (choices: minimal, standard, full)
  -f, --format  [string]  Output format (choices: text, ansi, console, markdown, html, json)
      --all               Show all global commands and options

────────────────────────────────────────────────────────────
Usage: padrone-test version [options]

Display the version number

Options:
  --verbose  Also show the runtime, platform and shell
  --check    Also check whether a newer version is available

────────────────────────────────────────────────────────────
Usage: padrone-test repl [scope]

Start an interactive REPL

Arguments:
  scope  Command to scope the REPL to

────────────────────────────────────────────────────────────
Usage: padrone-test list [command] [options]

Commands:
  [default]              
  extended               
  extended <subcommand>  

Run "padrone-test list [command] --help" for more information on a command.

Options:
  --status    [string]  Filter by status (choices: pending, in_progress, completed)
  --limit     [number]  Maximum number of tasks (default: 10)
  --priority  [string]  Filter by priority (default: medium) (choices: low, medium, high)

Subcommand Details:

────────────────────────────────────────────────────────────
Usage: padrone-test list extended [command] [options]

Commands:
  [default]  
  extended   

Run "padrone-test list extended [command] --help" for more information on a command.

Options:
  --status    [string]  Filter by status (choices: pending, in_progress, completed)
  --priority  [string]  Filter by priority (default: medium) (choices: low, medium, high)

Subcommand Details:

────────────────────────────────────────────────────────────
Usage: padrone-test list extended extended [options]

Options:
  --status  [string]  Filter by status (choices: pending, in_progress, completed)

────────────────────────────────────────────────────────────
Usage: padrone-test show <id> [options]

Arguments:
  id  Task ID

Options:
  --priority  [string]  Priority level (default: medium) (choices: low, medium, high)
  --verbose             Show detailed information

────────────────────────────────────────────────────────────
Usage: padrone-test filter [options]

Options:
  --status     [string]  Filter by status (choices: pending, in_progress, completed)
  --priority   [string]  Filter by priority (choices: low, medium, high)
  --ascending            Sort in ascending order

────────────────────────────────────────────────────────────
Usage: padrone-test batch <...ids>

Arguments:
  ...ids  Task IDs to process

────────────────────────────────────────────────────────────
Usage: padrone-test search <query> [options]

Arguments:
  query  Search query

Options:
  -s, --status  [string[]]  Filter by status (choices: pending, in_progress, completed)

────────────────────────────────────────────────────────────
Usage: padrone-test noop

────────────────────────────────────────────────────────────
Usage: padrone-test tags [options]

Options:
  -v, --verbose  Show detailed information

────────────────────────────────────────────────────────────
Usage: padrone-test deprecated-test [options]

Options:
  --old-arg                  [string]  This arg is deprecated (deprecated)
  --new-arg                  [string]  This is the new arg
  --deprecated-with-message            This arg is deprecated with a message
                                       (deprecated: Use newArg instead)

────────────────────────────────────────────────────────────
Usage: padrone-test hidden-test [options]

Options:
  --visible-arg      [string]  This arg is visible in help
  --another-visible            This arg is also visible

────────────────────────────────────────────────────────────
Usage: padrone-test examples-test [options]

Options:
  --output   [string]  Specify the output file path
                       Example: output.txt, ./dist/result.json
  --format   [string]  Choose the output format (choices: json, yaml, xml)
                       Example: json, yaml
  --verbose            Show detailed information
                       Example: true
  --config   [string]  Path to configuration file
                       Example: ./config.json, ~/.config/app.json
"
`;

exports[`help with full detail mode should generate full help with all nested commands in json format 1`] = `
"{
  "name": "padrone-test",
  "usage": {
    "command": "padrone-test",
    "hasSubcommands": true,
    "hasPositionals": false,
    "hasArguments": false,
    "helpFlag": "--help"
  },
  "subcommands": [
    {
      "name": "help",
      "description": "Display help for a command",
      "aliases": [
        "h"
      ],
      "hidden": true,
      "hasSubcommands": false
    },
    {
      "name": "version",
      "description": "Display the version number",
      "hidden": true,
      "hasSubcommands": false
    },
    {
      "name": "repl",
      "description": "Start an interactive REPL",
      "hidden": true,
      "hasSubcommands": false
    },
    {
      "name": "list"
    },
    {
      "name": "list",
      "hasSubcommands": true
    },
    {
      "name": "show",
      "hasSubcommands": false
    },
    {
      "name": "filter",
      "hasSubcommands": false
    },
    {
      "name": "batch",
      "hasSubcommands": false
    },
    {
      "name": "search",
      "hasSubcommands": false
    },
    {
      "name": "noop",
      "hasSubcommands": false
    },
    {
      "name": "tags",
      "hasSubcommands": false
    },
    {
      "name": "deprecated-test",
      "hasSubcommands": false
    },
    {
      "name": "hidden-test",
      "hasSubcommands": false
    },
    {
      "name": "examples-test",
      "hasSubcommands": false
    }
  ],
  "nestedCommands": [
    {
      "name": "help",
      "description": "Display help for a command",
      "aliases": [
        "h"
      ],
      "hidden": true,
      "usage": {
        "command": "padrone-test help",
        "hasSubcommands": false,
        "hasPositionals": true,
        "hasArguments": true,
        "helpFlag": "--help"
      },
      "positionals": [
        {
          "name": "...command",
          "description": "The command to show help for",
          "optional": true,
          "type": "array<string>"
        }
      ],
      "arguments": [
        {
          "name": "detail",
          "description": "How much detail to show",
          "optional": true,
          "type": "string",
          "enum": [
            "minimal",
            "standard",
            "full"
          ],
          "variadic": false,
          "negatable": false,
          "flags": [
            "d"
          ]
        },
        {
          "name": "format",
          "description": "Output format",
          "optional": true,
          "type": "string",
          "enum": [
            "text",
            "ansi",
            "console",
            "markdown",
            "html",
            "json"
          ],
          "variadic": false,
          "negatable": false,
          "flags": [
            "f"
          ]
        },
        {
          "name": "all",
          "description": "Show all global commands and options",
          "optional": true,
          "type": "boolean",
          "variadic": false,
          "negatable": true
        }
      ]
    },
    {
      "name": "version",
      "description": "Display the version number",
      "hidden": true,
      "usage": {
        "command": "padrone-test version",
        "hasSubcommands": false,
        "hasPositionals": false,
        "hasArguments": true,
        "helpFlag": "--help"
      },
      "arguments": [
        {
          "name": "verbose",
          "description": "Also show the runtime, platform and shell",
          "optional": true,
          "type": "boolean",
          "variadic": false,
          "negatable": true
        },
        {
          "name": "check",
          "description": "Also check whether a newer version is available",
          "optional": true,
          "type": "boolean",
          "variadic": false,
          "negatable": true
        }
      ]
    },
    {
      "name": "repl",
      "description": "Start an interactive REPL",
      "hidden": true,
      "usage": {
        "command": "padrone-test repl",
        "hasSubcommands": false,
        "hasPositionals": true,
        "hasArguments": false,
        "helpFlag": "--help"
      },
      "positionals": [
        {
          "name": "scope",
          "description": "Command to scope the REPL to",
          "optional": true,
          "type": "string"
        }
      ]
    },
    {
      "name": "list",
      "usage": {
        "command": "padrone-test list",
        "hasSubcommands": true,
        "hasPositionals": false,
        "hasArguments": true,
        "helpFlag": "--help"
      },
      "subcommands": [
        {
          "name": "[default]"
        },
        {
          "name": "extended"
        },
        {
          "name": "extended",
          "hasSubcommands": true
        }
      ],
      "nestedCommands": [
        {
          "name": "list extended",
          "usage": {
            "command": "padrone-test list extended",
            "hasSubcommands": true,
            "hasPositionals": false,
            "hasArguments": true,
            "helpFlag": "--help"
          },
          "subcommands": [
            {
              "name": "[default]"
            },
            {
              "name": "extended",
              "hasSubcommands": false
            }
          ],
          "nestedCommands": [
            {
              "name": "list extended extended",
              "usage": {
                "command": "padrone-test list extended extended",
                "hasSubcommands": false,
                "hasPositionals": false,
                "hasArguments": true,
                "helpFlag": "--help"
              },
              "arguments": [
                {
                  "name": "status",
                  "description": "Filter by status",
                  "optional": true,
                  "type": "string",
                  "enum": [
                    "pending",
                    "in_progress",
                    "completed"
                  ],
                  "variadic": false,
                  "negatable": false
                }
              ]
            }
          ],
          "arguments": [
            {
              "name": "status",
              "description": "Filter by status",
              "optional": true,
              "type": "string",
              "enum": [
                "pending",
                "in_progress",
                "completed"
              ],
              "variadic": false,
              "negatable": false
            },
            {
              "name": "priority",
              "description": "Filter by priority",
              "optional": true,
              "default": "medium",
              "type": "string",
              "enum": [
                "low",
                "medium",
                "high"
              ],
              "variadic": false,
              "negatable": false
            }
          ]
        }
      ],
      "arguments": [
        {
          "name": "status",
          "description": "Filter by status",
          "optional": true,
          "type": "string",
          "enum": [
            "pending",
            "in_progress",
            "completed"
          ],
          "variadic": false,
          "negatable": false
        },
        {
          "name": "limit",
          "description": "Maximum number of tasks",
          "optional": true,
          "default": 10,
          "type": "number",
          "variadic": false,
          "negatable": false
        },
        {
          "name": "priority",
          "description": "Filter by priority",
          "optional": true,
          "default": "medium",
          "type": "string",
          "enum": [
            "low",
            "medium",
            "high"
          ],
          "variadic": false,
          "negatable": false
        }
      ]
    },
    {
      "name": "show",
      "usage": {
        "command": "padrone-test show",
        "hasSubcommands": false,
        "hasPositionals": true,
        "hasArguments": true,
        "helpFlag": "--help"
      },
      "positionals": [
        {
          "name": "id",
          "description": "Task ID",
          "optional": false,
          "type": "string"
        }
      ],
      "arguments": [
        {
          "name": "priority",
          "description": "Priority level",
          "optional": true,
          "default": "medium",
          "type": "string",
          "enum": [
            "low",
            "medium",
            "high"
          ],
          "variadic": false,
          "negatable": false
        },
        {
          "name": "verbose",
          "description": "Show detailed information",
          "optional": true,
          "type": "boolean",
          "variadic": false,
          "negatable": true
        }
      ]
    },
    {
      "name": "filter",
      "usage": {
        "command": "padrone-test filter",
        "hasSubcommands": false,
        "hasPositionals": false,
        "hasArguments": true,
        "helpFlag": "--help"
      },
      "arguments": [
        {
          "name": "status",
          "description": "Filter by status",
          "optional": true,
          "type": "string",
          "enum": [
            "pending",
            "in_progress",
            "completed"
          ],
          "variadic": false,
          "negatable": false
        },
        {
          "name": "priority",
          "description": "Filter by priority",
          "optional": true,
          "type": "string",
          "enum": [
            "low",
            "medium",
            "high"
          ],
          "variadic": false,
          "negatable": false
        },
        {
          "name": "ascending",
          "description": "Sort in ascending order",
          "optional": true,
          "type": "boolean",
          "variadic": false,
          "negatable": true
        }
      ]
    },
    {
      "name": "batch",
      "usage": {
        "command": "padrone-test batch",
        "hasSubcommands": false,
        "hasPositionals": true,
        "hasArguments": false,
        "helpFlag": "--help"
      },
      "positionals": [
        {
          "name": "...ids",
          "description": "Task IDs to process",
          "optional": false,
          "type": "array<string>"
        }
      ]
    },
    {
      "name": "search",
      "usage": {
        "command": "padrone-test search",
        "hasSubcommands": false,
        "hasPositionals": true,
        "hasArguments": true,
        "helpFlag": "--help"
      },
      "positionals": [
        {
          "name": "query",
          "description": "Search query",
          "optional": false,
          "type": "string"
        }
      ],
      "arguments": [
        {
          "name": "status",
          "description": "Filter by status",
          "optional": true,
          "type": "string[]",
          "enum": [
            "pending",
            "in_progress",
            "completed"
          ],
          "variadic": true,
          "negatable": false,
          "flags": [
            "s"
          ]
        }
      ]
    },
    {
      "name": "noop",
      "usage": {
        "command": "padrone-test noop",
        "hasSubcommands": false,
        "hasPositionals": false,
        "hasArguments": false,
        "helpFlag": "--help"
      }
    },
    {
      "name": "tags",
      "usage": {
        "command": "padrone-test tags",
        "hasSubcommands": false,
        "hasPositionals": false,
        "hasArguments": true,
        "helpFlag": "--help"
      },
      "arguments": [
        {
          "name": "verbose",
          "description": "Show detailed information",
          "optional": true,
          "type": "boolean",
          "variadic": false,
          "negatable": true,
          "flags": [
            "v"
          ]
        }
      ]
    },
    {
      "name": "deprecated-test",
      "usage": {
        "command": "padrone-test deprecated-test",
        "hasSubcommands": false,
        "hasPositionals": false,
        "hasArguments": true,
        "helpFlag": "--help"
      },
      "arguments": [
        {
          "name": "oldArg",
          "description": "This arg is deprecated",
          "optional": true,
          "type": "string",
          "deprecated": true,
          "variadic": false,
          "negatable": false,
          "aliases": [
            "old-arg"
          ]
        },
        {
          "name": "newArg",
          "description": "This is the new arg",
          "optional": true,
          "type": "string",
          "variadic": false,
          "negatable": false,
          "aliases": [
            "new-arg"
          ]
        },
        {
          "name": "deprecatedWithMessage",
          "description": "This arg is deprecated with a message",
          "optional": true,
          "type": "boolean",
          "deprecated": "Use newArg instead",
          "variadic": false,
          "negatable": true,
          "aliases": [
            "deprecated-with-message"
          ]
        }
      ]
    },
    {
      "name": "hidden-test",
      "usage": {
        "command": "padrone-test hidden-test",
        "hasSubcommands": false,
        "hasPositionals": false,
        "hasArguments": true,
        "helpFlag": "--help"
      },
      "arguments": [
        {
          "name": "visibleArg",
          "description": "This arg is visible in help",
          "optional": true,
          "type": "string",
          "variadic": false,
          "negatable": false,
          "aliases": [
            "visible-arg"
          ]
        },
        {
          "name": "anotherVisible",
          "description": "This arg is also visible",
          "optional": true,
          "type": "boolean",
          "variadic": false,
          "negatable": true,
          "aliases": [
            "another-visible"
          ]
        }
      ]
    },
    {
      "name": "examples-test",
      "usage": {
        "command": "padrone-test examples-test",
        "hasSubcommands": false,
        "hasPositionals": false,
        "hasArguments": true,
        "helpFlag": "--help"
      },
      "arguments": [
        {
          "name": "output",
          "description": "Specify the output file path",
          "optional": true,
          "type": "string",
          "examples": [
            "output.txt",
            "./dist/result.json"
          ],
          "variadic": false,
          "negatable": false
        },
        {
          "name": "format",
          "description": "Choose the output format",
          "optional": true,
          "type": "string",
          "enum": [
            "json",
            "yaml",
            "xml"
          ],
          "examples": [
            "json",
            "yaml"
          ],
          "variadic": false,
          "negatable": false
        },
        {
          "name": "verbose",
          "description": "Show detailed information",
          "optional": true,
          "type": "boolean",
          "examples": [
            true
          ],
          "variadic": false,
          "negatable": true
        },
        {
          "name": "config",
          "description": "Path to configuration file",
          "optional": true,
          "type": "string",
          "examples": [
            "./config.json",
            "~/.config/app.json"
          ],
          "variadic": false,
          "negatable": false
        }
      ]
    }
  ],
  "builtins": [
    {
      "name": "help [command], --help, -h",
      "summary": "help [command]",
      "description": "Show help for a command",
      "sub": [
        {
          "name": "--all",
          "description": "Show all global commands and flags"
        },
        {
          "name": "--detail <level>",
          "description": "Detail level (minimal, standard, full)"
        },
        {
          "name": "--format <format>",
          "description": "Output format (text, ansi, json, markdown, html)"
        }
      ]
    },
    {
      "name": "version, --version, -v, -V",
      "summary": "version",
      "description": "Show version information"
    },
    {
      "name": "[command] --repl",
      "summary": "[command] --repl",
      "description": "Start interactive REPL scoped to a command"
    },
    {
      "name": "--color [theme], --no-color",
      "description": "Set color theme (default, ocean, warm, monochrome) or disable colors"
    }
  ]
}"
`;

exports[`help with full detail mode should generate full help with all nested commands in markdown format 1`] = `
"**Usage:** **padrone-test** *[command]*



### Commands:

  **help** (h)           Display help for a command

  **version**            Display the version number

  **repl**               Start an interactive REPL

  **list**               

  **list*** <subcommand>*  

  **show**               

  **filter**             

  **batch**              

  **search**             

  **noop**               

  **tags**               

  **deprecated-test**    

  **hidden-test**        

  **examples-test**      



**Global:** *help [command], version, [command] --repl*

*Run "padrone-test [command] --help" for more information. Use "--all" for all global commands.*



### Subcommand Details:



*────────────────────────────────────────────────────────────*

**Usage:** **padrone-test help** *[...command]* *[options]*



*Aliases: h*



Display help for a command



### Arguments:

  \`...command\`  The command to show help for



### Options:

  \`-d\`, \`--detail\`  \`[string]\`  How much detail to show

    *(choices: minimal, standard, full)*

  \`-f\`, \`--format\`  \`[string]\`  Output format

    *(choices: text, ansi, console, markdown, html, json)*

      \`--all\`               Show all global commands and options



*────────────────────────────────────────────────────────────*

**Usage:** **padrone-test version** *[options]*



Display the version number



### Options:

  \`--verbose\`  Also show the runtime, platform and shell

  \`--check\`    Also check whether a newer version is available



*────────────────────────────────────────────────────────────*

**Usage:** **padrone-test repl** *[scope]*



Start an interactive REPL



### Arguments:

  \`scope\`  Command to scope the REPL to



*────────────────────────────────────────────────────────────*

**Usage:** **padrone-test list** *[command]* *[options]*



### Commands:

  *[default]*              

  **extended**               

  **extended*** <subcommand>*  



*Run "padrone-test list [command] --help" for more information on a command.*



### Options:

  \`--status\`    \`[string]\`  Filter by status

    *(choices: pending, in_progress, completed)*

  \`--limit\`     \`[number]\`  Maximum number of tasks

    *(default: 10)*

  \`--priority\`  \`[string]\`  Filter by priority

    *(default: medium)* *(choices: low, medium, high)*



### Subcommand Details:



*────────────────────────────────────────────────────────────*

**Usage:** **padrone-test list extended** *[command]* *[options]*



### Commands:

  *[default]*  

  **extended**   



*Run "padrone-test list extended [command] --help" for more information on a command.*



### Options:

  \`--status\`    \`[string]\`  Filter by status

    *(choices: pending, in_progress, completed)*

  \`--priority\`  \`[string]\`  Filter by priority

    *(default: medium)* *(choices: low, medium, high)*



### Subcommand Details:



*────────────────────────────────────────────────────────────*

**Usage:** **padrone-test list extended extended** *[options]*



### Options:

  \`--status\`  \`[string]\`  Filter by status

    *(choices: pending, in_progress, completed)*



*────────────────────────────────────────────────────────────*

**Usage:** **padrone-test show** *<id>* *[options]*



### Arguments:

  \`id\`  Task ID



### Options:

  \`--priority\`  \`[string]\`  Priority level

    *(default: medium)* *(choices: low, medium, high)*

  \`--verbose\`             Show detailed information



*────────────────────────────────────────────────────────────*

**Usage:** **padrone-test filter** *[options]*



### Options:

  \`--status\`     \`[string]\`  Filter by status

    *(choices: pending, in_progress, completed)*

  \`--priority\`   \`[string]\`  Filter by priority

    *(choices: low, medium, high)*

  \`--ascending\`            Sort in ascending order



*────────────────────────────────────────────────────────────*

**Usage:** **padrone-test batch** *<...ids>*



### Arguments:

  \`...ids\`  Task IDs to process



*────────────────────────────────────────────────────────────*

**Usage:** **padrone-test search** *<query>* *[options]*



### Arguments:

  \`query\`  Search query



### Options:

  \`-s\`, \`--status\`  \`[string[]]\`  Filter by status

    *(choices: pending, in_progress, completed)*



*────────────────────────────────────────────────────────────*

**Usage:** **padrone-test noop**



*────────────────────────────────────────────────────────────*

**Usage:** **padrone-test tags** *[options]*



### Options:

  \`-v\`, \`--verbose\`  Show detailed information



*────────────────────────────────────────────────────────────*

**Usage:** **padrone-test deprecated-test** *[options]*



### Options:

  ~~--old-arg~~                  \`[string]\`  ~~This arg is deprecated~~

    *(deprecated)*

  \`--new-arg\`                  \`[string]\`  This is the new arg

  ~~--deprecated-with-message~~            ~~This arg is deprecated with a message~~

    *(deprecated: Use newArg instead)*



*────────────────────────────────────────────────────────────*

**Usage:** **padrone-test hidden-test** *[options]*



### Options:

  \`--visible-arg\`      \`[string]\`  This arg is visible in help

  \`--another-visible\`            This arg is also visible



*────────────────────────────────────────────────────────────*

**Usage:** **padrone-test examples-test** *[options]*



### Options:

  \`--output\`   \`[string]\`  Specify the output file path

    **Example:** \`output.txt, ./dist/result.json\`

  \`--format\`   \`[string]\`  Choose the output format

    *(choices: json, yaml, xml)*

    **Example:** \`json, yaml\`

  \`--verbose\`            Show detailed information

    **Example:** \`true\`

  \`--config\`   \`[string]\`  Path to configuration file

    **Example:** \`./config.json, ~/.config/app.json\`

"
`;

exports[`help with full detail mode should generate full help for a specific command with subcommands 1`] = `
"Usage: padrone-test list [command] [options]

Commands:
  [default]              
  extended               
  extended <subcommand>  

Run "padrone-test list [command] --help" for more information on a command.

Options:
  --status    [string]  Filter by status (choices: pending, in_progress, completed)
  --limit     [number]  Maximum number of tasks (default: 10)
  --priority  [string]  Filter by priority (default: medium) (choices: low, medium, high)

Subcommand Details:

────────────────────────────────────────────────────────────
Usage: padrone-test list extended [command] [options]

Commands:
  [default]  
  extended   

Run "padrone-test list extended [command] --help" for more information on a command.

Options:
  --status    [string]  Filter by status (choices: pending, in_progress, completed)
  --priority  [string]  Filter by priority (default: medium) (choices: low, medium, high)

Subcommand Details:

────────────────────────────────────────────────────────────
Usage: padrone-test list extended extended [options]

Options:
  --status  [string]  Filter by status (choices: pending, in_progress, completed)
"
`;

exports[`help with full detail mode should generate full help for deeply nested commands 1`] = `
"Usage: padrone-test list extended [command] [options]

Commands:
  [default]  
  extended   

Run "padrone-test list extended [command] --help" for more information on a command.

Options:
  --status    [string]  Filter by status (choices: pending, in_progress, completed)
  --priority  [string]  Filter by priority (default: medium) (choices: low, medium, high)

Subcommand Details:

────────────────────────────────────────────────────────────
Usage: padrone-test list extended extended [options]

Options:
  --status  [string]  Filter by status (choices: pending, in_progress, completed)
"
`;

exports[`help with full detail mode should work with ansi format in full detail mode 1`] = `
"\x1B[1mUsage:\x1B[0m \x1B[36m\x1B[1mpadrone-test list\x1B[0m \x1B[90m[command]\x1B[0m \x1B[90m[options]\x1B[0m

\x1B[1mCommands:\x1B[0m
  \x1B[90m[default]\x1B[0m              
  \x1B[36m\x1B[1mextended\x1B[0m               
  \x1B[36m\x1B[1mextended\x1B[0m\x1B[90m <subcommand>\x1B[0m  

\x1B[90mRun "padrone-test list [command] --help" for more information on a command.\x1B[0m

\x1B[1mOptions:\x1B[0m
  \x1B[32m--status\x1B[0m    \x1B[33m[string]\x1B[0m  \x1B[2mFilter by status\x1B[0m \x1B[90m(choices: pending, in_progress, completed)\x1B[0m
  \x1B[32m--limit\x1B[0m     \x1B[33m[number]\x1B[0m  \x1B[2mMaximum number of tasks\x1B[0m \x1B[90m(default: 10)\x1B[0m
  \x1B[32m--priority\x1B[0m  \x1B[33m[string]\x1B[0m  \x1B[2mFilter by priority\x1B[0m \x1B[90m(default: medium)\x1B[0m \x1B[90m(choices: low, medium, high)\x1B[0m

\x1B[1mSubcommand Details:\x1B[0m

\x1B[90m────────────────────────────────────────────────────────────\x1B[0m
\x1B[1mUsage:\x1B[0m \x1B[36m\x1B[1mpadrone-test list extended\x1B[0m \x1B[90m[command]\x1B[0m \x1B[90m[options]\x1B[0m

\x1B[1mCommands:\x1B[0m
  \x1B[90m[default]\x1B[0m  
  \x1B[36m\x1B[1mextended\x1B[0m   

\x1B[90mRun "padrone-test list extended [command] --help" for more information on a command.\x1B[0m

\x1B[1mOptions:\x1B[0m
  \x1B[32m--status\x1B[0m    \x1B[33m[string]\x1B[0m  \x1B[2mFilter by status\x1B[0m \x1B[90m(choices: pending, in_progress, completed)\x1B[0m
  \x1B[32m--priority\x1B[0m  \x1B[33m[string]\x1B[0m  \x1B[2mFilter by priority\x1B[0m \x1B[90m(default: medium)\x1B[0m \x1B[90m(choices: low, medium, high)\x1B[0m

\x1B[1mSubcommand Details:\x1B[0m

\x1B[90m────────────────────────────────────────────────────────────\x1B[0m
\x1B[1mUsage:\x1B[0m \x1B[36m\x1B[1mpadrone-test list extended extended\x1B[0m \x1B[90m[options]\x1B[0m

\x1B[1mOptions:\x1B[0m
  \x1B[32m--status\x1B[0m  \x1B[33m[string]\x1B[0m  \x1B[2mFilter by status\x1B[0m \x1B[90m(choices: pending, in_progress, completed)\x1B[0m
"
`;

exports[`help with command-level examples should render command examples in text format 1`] = `
"Usage: example-cli deploy [options]

Deploy the application

Examples:
  $ example-cli deploy --env production
  $ example-cli deploy --env staging --dry-run

Options:
  --env      <string>  Target environment
  --dry-run            Dry run mode
"
`;

exports[`help with groups should group options under labeled sections 1`] = `
"Usage: group-test deploy [options]

Options:
  --target   <string>  Deploy target
  --verbose            Verbose output

AWS:
  --region   [string]  AWS region
  --profile  [string]  AWS profile

Advanced:
  --retries  [number]  Retry count
  --timeout  [number]  Timeout in seconds
"
`;

exports[`help with groups should group subcommands under labeled sections 1`] = `
"Usage: group-test [command]

Commands:
  init    Initialize project
  build   Build project

Cloud:
  deploy  Deploy to cloud
  logs    View cloud logs

Quality:
  lint    Run linter
  test    Run tests

Global: help [command], version, [command] --repl
Run "group-test [command] --help" for more information. Use "--all" for all global commands.
"
`;
